Closed
Bug 85484
Opened 25 years ago
Closed 22 years ago
Proxy: auth prompt doesn't show realm
Categories
(Core :: Networking, defect)
Core
Networking
Tracking
()
RESOLVED
FIXED
mozilla1.8beta1
People
(Reporter: bugzilla.mozilla.org-3, Assigned: darin.moz)
References
Details
(Keywords: testcase, Whiteboard: [patch ready to land])
Attachments
(1 file, 2 obsolete files)
|
5.06 KB,
patch
|
Biesinger
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
When I try to connect to a page using an authenticating proxy server I am
prompted 'Enter username and password for proxy at myproxy.mydomain.tld:5555'.
Expected result:
A prompt saying 'Enter username and password for "My Proxy Realm" at
myproxy.mydomain.tld:5555' (where My Proxy Realm is the actual realm of the
proxy authentication) like it works with regular basic authentication.
I guess this is a minor bug since most people probably use only one password for
their proxy server(s).
Comment 1•25 years ago
|
||
marking NEW.
Severity: normal → minor
Status: UNCONFIRMED → NEW
Ever confirmed: true
+qawnated.
I never bothered to look for realms in my Proxy Auth configs or packet traces...
Keywords: qawanted
Summary: Proxy realm not shown in username/password prompt → Proxy: auth prompt doesn't show realm
Updated•25 years ago
|
Target Milestone: mozilla0.9.3 → mozilla0.9.4
Comment 3•24 years ago
|
||
Bugs targeted at mozilla1.0 without the mozilla1.0 keyword moved to mozilla1.0.1
(you can query for this string to delete spam or retrieve the list of bugs I've
moved)
Target Milestone: mozilla1.0 → mozilla1.0.1
Comment 5•23 years ago
|
||
moving neeti's futured bugs for triaging.
Assignee: neeti → new-network-bugs
+clean-report.
default owners and target, to put into triage query, per #7.
A comment in bug 60026 said realm does appear, so this might be working already.
My main test proxy seems to use a realm of "unspecified", so I cannot confirm if
this is WFM or not.
Assignee: new-network-bugs → dougt
Target Milestone: Future → ---
I logged duplicate bug 210848 on this issue. The proxy authentication challenge
display of the "My Proxy Realm" is still not working as of Mozilla 1.4RC3. I'll
close 210848 and add a vote to this bug.
*** Bug 210848 has been marked as a duplicate of this bug. ***
Comment 10•23 years ago
|
||
This is working properly as of Mozilla 1.4 final (Mozilla/5.0 (Windows; U;
Win98; en-US; rv:1.4) Gecko/20030624). It also works with Netscape 7.1.
Comment 11•23 years ago
|
||
Marking WFM as per reporter comments.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → WORKSFORME
| Assignee | ||
Comment 12•23 years ago
|
||
no, this bug is not fixed. for proxy auth, the dialog does not show the realm
string. REOPENING.
Status: RESOLVED → REOPENED
Resolution: WORKSFORME → ---
| Reporter | ||
Comment 14•22 years ago
|
||
This patch adds the realm to the proxy dialog.
I am not used to hacking C++ so bear with me if it isn't done right.
| Reporter | ||
Updated•22 years ago
|
Attachment #144409 -
Flags: review?(darin)
Comment 15•22 years ago
|
||
Comment on attachment 144409 [details] [diff] [review]
Fix
+ const PRUnichar *strings[] = { ToNewUnicode(nsDependentCString(realm)),
this leaks memory... you should nsMemory::Free(strings[0]) after the
FormatStringFromName call
| Reporter | ||
Comment 16•22 years ago
|
||
Attachment #144409 -
Attachment is obsolete: true
| Reporter | ||
Updated•22 years ago
|
Attachment #144409 -
Flags: review?(darin)
| Assignee | ||
Updated•22 years ago
|
Attachment #144413 -
Flags: review?(darin)
| Assignee | ||
Comment 17•22 years ago
|
||
revised patch. better to use NS_ConvertASCIItoUTF16 instead of ToNewUnicode.
that way you avoid a heap allocation in most cases.
| Assignee | ||
Updated•22 years ago
|
Attachment #144413 -
Attachment is obsolete: true
| Assignee | ||
Updated•22 years ago
|
Attachment #144413 -
Flags: review?(darin) → review-
| Assignee | ||
Updated•22 years ago
|
Attachment #145123 -
Flags: superreview?(bzbarsky)
Attachment #145123 -
Flags: review?(cbiesinger)
| Assignee | ||
Comment 18•22 years ago
|
||
-> 1.8 alpha since we're already into the localization freeze for 1.7 final.
Status: REOPENED → ASSIGNED
OS: Windows 2000 → All
Priority: P4 → --
Hardware: PC → All
Whiteboard: [patch]
Target Milestone: --- → mozilla1.8alpha
Updated•22 years ago
|
Attachment #145123 -
Flags: review?(cbiesinger) → review+
Comment 19•22 years ago
|
||
Comment on attachment 145123 [details] [diff] [review]
v1.1 patch
sr=bzbarsky
Attachment #145123 -
Flags: superreview?(bzbarsky) → superreview+
Comment 20•22 years ago
|
||
CONFIRIMED:
Testcase available @ mozilla office.
contact me for the config info.
Proxy-authenticate: basic realm="is this a realm"
For anyone using Netscape Proxy Server, the configuation is under:
Restrict Access -> Deny -> "Login Prompt"
Also, while I'm here, I noticed that the proxy auth dialog does not display the
port number. Should I file a separate bug?
| Assignee | ||
Updated•22 years ago
|
Whiteboard: [patch] → [patch ready to land]
Target Milestone: mozilla1.8alpha1 → mozilla1.8beta
| Assignee | ||
Comment 21•22 years ago
|
||
fixed-on-trunk for 1.8beta
> Also, while I'm here, I noticed that the proxy auth dialog does not display the
> port number. Should I file a separate bug?
I modified the patch to fix this problem. Thanks for pointing it out.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago → 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•