fixes bug 85484 "Proxy: auth prompt doesn't show realm" r=biesi sr=bzbarsky